# wyoming-glados

./: .gitignore  .gitmodules  .pylintrc  GitReleaseManager.yaml  README.md  __init__.py  __main__.py  download.py  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.github/workflows/: black.yml  codeql.yml  docker-build-check.yml  docker-publish.yml  publish_container.yaml  pylint.yml  pyright.yml  pytest-ruff.yml  release.yaml  ruff.yml  test.yml
docker/: Dockerfile  Dockerfile.arm64  Dockerfile.igpu  docker-compose-github-igpu.yaml  docker-compose-github.yaml  docker-compose-igpu.yaml  docker-compose.yaml  run.sh
server/: __init__.py  handler.py  languages.py  process.py  sentence_boundary.py
tests/: README.md  __init__.py  conftest.py  test_download.py  test_handler.py  test_main.py  test_process.py  test_sentence_boundary.py
