[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wyoming-glados"
version = "0.1.0"
description = "Wyoming protocol server for GLaDOS TTS"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    "gladostts",  # Exclude submodule from linting
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__main__.py" = ["E402"]  # Module level imports not at top (needed for warning suppression)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "gladostts/*",
    "docker/*",
    "htmlcov/*",
]

[tool.coverage.report]
omit = [
    "tests/*",
]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
include = [
    "__main__.py",
    "download.py",
    "server",
    "gladostts",
]
exclude = [
    "tests",
    "docker",
    "htmlcov",
    ".venv",
    "**/.git",
    "**/.hg",
    "**/.svn",
    "**/.*",
    "**/node_modules",
    "**/__pycache__",
    "**/.mypy_cache",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "gladostts/models",
]
reportMissingModuleSource = "none"
reportMissingTypeStubs = "none"
reportDeprecated = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportUnnecessaryCast = "none"
strict = [
    "download.py",
    "server",
]
executionEnvironments = [
    { root = ".", extraPaths = ["."] },
]
